# east

./: .gitignore  AUTHORS  BUGS  configure.ac  configure.in  configure.scan
m4/: debug.m4  doxygen.m4  libdep.m4  optimize.m4
src/: .statistics.c.swo  BLOSUM  Makefile.am  Makefile.in  ambig.c  ambig.h  east.c  east_types.h  katool.c  matrix.c  matrix.h  opts.c  opts.h  output.c  output.h  recursion.c  recursion.h  seq.c  seq.h  statistics.c  statistics.h  traceback.c  traceback.h  trecall.c
